--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <title>Lazar Stojanović</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="resources/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Whisper&display=swap"
+          rel="stylesheet">
 </head>
 <body>
+    <div class="top-container">
+        <img class="cloud-top" src="resources/cloud.png" alt="cloud-img">
+        <h1 id="name">I'm Lazar.</h1>
+        <p>a programmer and web designer.</p>
+        <img class="cloud-bottom" src="resources/cloud.png" alt="cloud-img">
+        <img class="mountain" src="resources/mountain.png" alt="mountain-img">
+    </div>
 
 </body>
 </html>
