bottom div and footer

--- a/index.html
+++ b/index.html
@@ -14,9 +14,50 @@
     <div class="top-container">
         <img class="cloud-top" src="resources/cloud.png" alt="cloud-img">
         <h1 id="name">I'm Lazar.</h1>
-        <p>a programmer and web designer.</p>
+        <p id="name-p">a programmer and web designer.</p>
         <img class="cloud-bottom" src="resources/cloud.png" alt="cloud-img">
         <img class="mountain" src="resources/mountain.png" alt="mountain-img">
+    </div>
+    <div class="middle-container">
+      <div class="profile">
+        <img src="resources/Profile.png" alt="profile-image.png">
+        <h2>Hello.</h2>
+        <p>My name is Lazar Stojanović. I am CEO of Lazar-NC construction firm. Since my firm became
+            self-sustained, and
+            now doesn't require my
+            time. I decided to venture into programming.</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="python" src="https://cdn-icons-png.flaticon.com/512/5968/5968350.png" alt="">
+          <h3>Python developer</h3>
+          <p>I started learning Python 4 months ago. It's going quite well, I learned all basics of Python
+              and advanced OOP. And I am familiar with libraries such as Pandas, Tkinter, Kivy, Requests API and
+              much more...</p>
+        </div>
+        <div class="skill-row">
+          <img class="web-design" src="https://cdn-icons-png.flaticon.com/512/3159/3159301.png" alt="">
+          <h3>Web designer</h3>
+          <p>And as you can see now, I am in Web Foundations section learning HTML and CSS before I jump onto Flask,
+              Django, Justpy and such.</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>I’m currently available for freelance work.</h3>
+        <p>If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then get in touch.</p>
+        <a class="btn" href="mailto:lakisd98@gmail.com">MESSAGE ME</a>
+      </div>
+    </div>
+
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/in/lazar-stojanovi%C4%87-9ba1a5238/">LinkedIn</a>
+      <a class="footer-link" href="https://www.facebook.com/LazarStojanoviic/">Facebook</a>
+      <a class="footer-link" href="https://search.bisnode.rs/rs/1118738/lazar-stojanovic-pr-lazar-nc/?l=en-US">Company</a>
+      <p>© 2022 Lazar Stojanović. All rights reserved.</p>
     </div>
 
 </body>
