--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>I’m currently available for freelance work.</h3>
-        <p>If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then get in touch.</p>
+        <p id="last-text">If you have a project that you want to get started, think you need my help with something or
+            just
+            fancy saying hey, then get in touch.</p>
         <a class="btn" href="mailto:lakisd98@gmail.com">MESSAGE ME</a>
       </div>
     </div>
@@ -57,7 +59,7 @@
       <a class="footer-link" href="https://www.linkedin.com/in/lazar-stojanovi%C4%87-9ba1a5238/">LinkedIn</a>
       <a class="footer-link" href="https://www.facebook.com/LazarStojanoviic/">Facebook</a>
       <a class="footer-link" href="https://search.bisnode.rs/rs/1118738/lazar-stojanovic-pr-lazar-nc/?l=en-US">Company</a>
-      <p>© 2022 Lazar Stojanović. All rights reserved.</p>
+      <p id="footer-text">© 2022 Lazar Stojanović. All rights reserved.</p>
     </div>
 
 </body>
